--- a/DeepLearning_Tutorial.ipynb
+++ b/DeepLearning_Tutorial.ipynb
@@ -28,7 +28,7 @@
     "- When using Keras, one can always customize the network more finely by returning to Tensorflow\n",
     "- Use Keras whenever you would use Tensorflow, and return to Tensorflow to customize the network\n",
     "\n",
-    "Alternative deep learning libraries: PyTorch (developped by Facebook), Theano (MILA group, will be discontinued!).\n"
+    "Alternative deep learning libraries: Among many others, PyTorch (developped by Facebook), Theano (MILA group, will be discontinued!).\n"
    ]
   },
   {
